--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./lib/adapter.js",
   "scripts": {
     "test": "node test/integration/runner -R spec -b",
+    "test2": "node test/integration/runner2 -R spec -b",
     "prepublish": "npm prune"
   },
   "repository": {
@@ -22,13 +23,14 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "dependencies": {
-    "nedb": "https://github.com/adityamukho/nedb/tarball/v0.11.1g",
     "async": "^0.2.10",
-    "lodash": "^2.4.1",
     "base-framework": "^1.0.1",
+    "lodash": "^2.4.1",
     "mkdirp": "^0.3.5",
-    "waterline-errors": "^0.10.0-rc1",
-    "rimraf": "^2.2.6"
+    "nedb": "https://github.com/adityamukho/nedb/tarball/v0.11.1g",
+    "pify": "^3.0.0",
+    "rimraf": "^2.2.6",
+    "waterline-errors": "^0.10.0-rc1"
   },
   "devDependencies": {
     "waterline-adapter-tests": "~0.10.0",
