--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./lib/adapter.js",
   "scripts": {
     "test": "node test/integration/runner -R spec -b",
-    "test2": "rm -rf log.txt && node test/integration/runner2 -R spec -b >> log.txt",
+    "test2": "rm -rf log.txt && node test/integration/runner2 -R spec -b",
     "prepublish": "npm prune"
   },
   "repository": {
@@ -25,7 +25,7 @@
   "dependencies": {
     "async": "^0.2.10",
     "base-framework": "^1.0.1",
-    "lodash": "^2.4.1",
+    "lodash": "^4.17.4",
     "mkdirp": "^0.3.5",
     "nedb": "https://github.com/adityamukho/nedb/tarball/v0.11.1g",
     "pify": "^3.0.0",
